@@ -18,12 +18,12 @@ java  -cp bin  onebrc.CreateMeasurements3 $rows
 
 echo ""
 echo "Starting NawaMan's calculation."
-java  -cp bin  onebrc.CalculateAverage_nawaman  | sed 's/\([0-9]\), /\1\
+java --enable-preview -p bin -m OneBRC/onebrc.CalculateAverage_nawaman | sed 's/\([0-9]\), /\1\
 /g' | sed 's/[{}]//g' | grep -vE "Time: [0-9]+" | tee result-nawaman.txt
 
 echo ""
 echo "Starting Baseline calculation (it will take awhile)."
-java  -cp bin  onebrc.CalculateAverage_baseline | sed 's/\([0-9]\), /\1\
+java --enable-preview -p bin -m OneBRC/onebrc.CalculateAverage_baseline | sed 's/\([0-9]\), /\1\
 /g' | sed 's/[{}]//g' | grep -vE "Time: [0-9]+" | tee result-baseline.txt
 
 echo ""
